# Eden-s-Sins

./: .gitignore  Cargo.toml  MITRE_MAPPING.md  README.md  requirements.txt
crates/arch/: Cargo.toml
crates/arch/src/: aarch64.rs  lib.rs  x86_64.rs
crates/fitness/: Cargo.toml
crates/fitness/src/: lib.rs
crates/genome/: Cargo.toml
crates/genome/src/: lib.rs
crates/morphogen/: Cargo.toml
crates/morphogen/src/: lib.rs
crates/mutator/: Cargo.toml
crates/mutator/src/: lib.rs
crates/nucleus/: Cargo.toml
crates/nucleus/src/: lib.rs
crates/repair/: Cargo.toml
crates/repair/src/: lib.rs
crates/transcriber/: Cargo.toml
crates/transcriber/src/: lib.rs
demo/: attack_chain.py  report_gen.py  scenario.md
detections/osquery/: macos_persistence_pack.conf
detections/sigma/: persistence_launch_agent.yml  recon_log_enumeration.yml  tcc_db_access.yml
detections/yara/: eden_variant.yar  macos_implant_strings.yar
hardening/: audit_config.sh  lockdown.sh
tools/: cleanup.sh
tools/bypass/: codesign_analyzer.py  gatekeeper_check.sh  tcc_audit.py
tools/exfil/: browser_creds.py  clipboard_sniff.py  fsevents_monitor.py  keychain_exfil.py  screenshot.sh  ssh_harvest.py  wifi_harvest.sh
tools/persist/: cron_persist.py  dyld_inject.sh  dylib_hijack_scanner.py  launch_agent_implant.py  login_item_persist.py
tools/privesc/: suid_hunter.sh  symlink_race.py  xpc_fuzzer.py
tools/recon/: aslr_probe.py  fw_dump.sh  keychain_dump.sh  log_hunter.sh  macos_fingerprint.py  net_recon.sh  preflight.sh  spotlight_loot.py
