[workspace]
resolver = "2"
members = [
    "crates/arch",
    "crates/genome",
    "crates/mutator",
    "crates/morphogen",
    "crates/repair",
    "crates/transcriber",
    "crates/fitness",
    "crates/nucleus",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/m4rba4s/Edem-Sins"

[workspace.dependencies]
eden-arch = { path = "crates/arch" }
eden-genome = { path = "crates/genome" }
eden-mutator = { path = "crates/mutator" }
eden-morphogen = { path = "crates/morphogen" }
eden-repair = { path = "crates/repair" }
eden-transcriber = { path = "crates/transcriber" }
eden-fitness = { path = "crates/fitness" }
rand = "0.8"
rand_chacha = "0.3"
blake3 = "1"
